--- a/GenericHID/generichid/programdlg.ui
+++ b/GenericHID/generichid/programdlg.ui
@@ -9,8 +9,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>259</width>
-    <height>315</height>
+    <width>245</width>
+    <height>262</height>
    </rect>
   </property>
   <property name="sizePolicy">
@@ -21,14 +21,14 @@
   </property>
   <property name="minimumSize">
    <size>
-    <width>259</width>
-    <height>315</height>
+    <width>245</width>
+    <height>262</height>
    </size>
   </property>
   <property name="maximumSize">
    <size>
-    <width>259</width>
-    <height>315</height>
+    <width>245</width>
+    <height>262</height>
    </size>
   </property>
   <property name="windowTitle">
@@ -246,7 +246,7 @@
       </spacer>
      </item>
      <item>
-      <widget class="QPushButton" name="pushButton_4">
+      <widget class="QPushButton" name="btnClose">
        <property name="text">
         <string>Close</string>
        </property>
@@ -273,5 +273,93 @@
  <resources>
   <include location="generichid.qrc"/>
  </resources>
- <connections/>
+ <connections>
+  <connection>
+   <sender>btnClose</sender>
+   <signal>clicked()</signal>
+   <receiver>ProgramDlgClass</receiver>
+   <slot>onClose()</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>131</x>
+     <y>240</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>192</x>
+     <y>240</y>
+    </hint>
+   </hints>
+  </connection>
+  <connection>
+   <sender>btnRestartDevice</sender>
+   <signal>clicked()</signal>
+   <receiver>ProgramDlgClass</receiver>
+   <slot>onRestartDevice()</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>138</x>
+     <y>179</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>198</x>
+     <y>185</y>
+    </hint>
+   </hints>
+  </connection>
+  <connection>
+   <sender>btnProgram</sender>
+   <signal>clicked()</signal>
+   <receiver>ProgramDlgClass</receiver>
+   <slot>onProgram()</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>130</x>
+     <y>153</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>199</x>
+     <y>148</y>
+    </hint>
+   </hints>
+  </connection>
+  <connection>
+   <sender>btnStartBootloader</sender>
+   <signal>clicked()</signal>
+   <receiver>ProgramDlgClass</receiver>
+   <slot>onStartBootloader()</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>119</x>
+     <y>119</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>197</x>
+     <y>105</y>
+    </hint>
+   </hints>
+  </connection>
+  <connection>
+   <sender>btnRefresh</sender>
+   <signal>clicked()</signal>
+   <receiver>ProgramDlgClass</receiver>
+   <slot>onRefresh()</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>192</x>
+     <y>28</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>193</x>
+     <y>49</y>
+    </hint>
+   </hints>
+  </connection>
+ </connections>
+ <slots>
+  <slot>onClose()</slot>
+  <slot>onRestartDevice()</slot>
+  <slot>onProgram()</slot>
+  <slot>onStartBootloader()</slot>
+  <slot>onRefresh()</slot>
+ </slots>
 </ui>
