--- a/GenericHID/generichid/generichid.ui
+++ b/GenericHID/generichid/generichid.ui
@@ -6,20 +6,36 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>600</width>
-    <height>400</height>
+    <width>759</width>
+    <height>548</height>
    </rect>
   </property>
   <property name="windowTitle">
    <string>GenericHID</string>
   </property>
-  <widget class="QWidget" name="centralWidget"/>
+  <widget class="QWidget" name="centralWidget">
+   <layout class="QHBoxLayout" name="horizontalLayout_2">
+    <property name="spacing">
+     <number>0</number>
+    </property>
+    <property name="margin">
+     <number>0</number>
+    </property>
+    <item>
+     <widget class="QGraphicsView" name="graphicsView">
+      <property name="rubberBandSelectionMode">
+       <enum>Qt::ContainsItemShape</enum>
+      </property>
+     </widget>
+    </item>
+   </layout>
+  </widget>
   <widget class="QMenuBar" name="menuBar">
    <property name="geometry">
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>600</width>
+     <width>759</width>
      <height>21</height>
     </rect>
    </property>
@@ -51,8 +67,53 @@
    <attribute name="toolBarBreak">
     <bool>false</bool>
    </attribute>
+   <addaction name="actionPointerTool"/>
+   <addaction name="actionWireLinkTool"/>
+   <addaction name="actionRotateTool"/>
+   <addaction name="actionMirrorTool"/>
   </widget>
   <widget class="QStatusBar" name="statusBar"/>
+  <widget class="QToolBar" name="toolToolBar">
+   <property name="minimumSize">
+    <size>
+     <width>32</width>
+     <height>32</height>
+    </size>
+   </property>
+   <property name="windowTitle">
+    <string>toolBar</string>
+   </property>
+   <attribute name="toolBarArea">
+    <enum>LeftToolBarArea</enum>
+   </attribute>
+   <attribute name="toolBarBreak">
+    <bool>false</bool>
+   </attribute>
+  </widget>
+  <widget class="QDockWidget" name="dockWidget">
+   <property name="features">
+    <set>QDockWidget::NoDockWidgetFeatures</set>
+   </property>
+   <property name="allowedAreas">
+    <set>Qt::RightDockWidgetArea</set>
+   </property>
+   <attribute name="dockWidgetArea">
+    <number>2</number>
+   </attribute>
+   <widget class="QWidget" name="dockWidgetContents">
+    <layout class="QHBoxLayout" name="horizontalLayout">
+     <property name="spacing">
+      <number>0</number>
+     </property>
+     <property name="margin">
+      <number>0</number>
+     </property>
+     <item>
+      <widget class="TreePropertyBrowser" name="listView"/>
+     </item>
+    </layout>
+   </widget>
+  </widget>
   <action name="actionOpen">
    <property name="text">
     <string>&amp;Open</string>
@@ -100,8 +161,51 @@
     <string>&amp;Import and Program</string>
    </property>
   </action>
+  <action name="actionPointerTool">
+   <property name="icon">
+    <iconset resource="generichid.qrc">
+     <normaloff>:/GenericHID/resources/Cursor.png</normaloff>:/GenericHID/resources/Cursor.png</iconset>
+   </property>
+   <property name="text">
+    <string>Pointer</string>
+   </property>
+  </action>
+  <action name="actionWireLinkTool">
+   <property name="icon">
+    <iconset resource="generichid.qrc">
+     <normaloff>:/GenericHID/resources/Wire.png</normaloff>:/GenericHID/resources/Wire.png</iconset>
+   </property>
+   <property name="text">
+    <string>Wire Link</string>
+   </property>
+  </action>
+  <action name="actionRotateTool">
+   <property name="icon">
+    <iconset resource="generichid.qrc">
+     <normaloff>:/GenericHID/resources/Rotate.png</normaloff>:/GenericHID/resources/Rotate.png</iconset>
+   </property>
+   <property name="text">
+    <string>Rotate</string>
+   </property>
+  </action>
+  <action name="actionMirrorTool">
+   <property name="icon">
+    <iconset resource="generichid.qrc">
+     <normaloff>:/GenericHID/resources/Mirror.png</normaloff>:/GenericHID/resources/Mirror.png</iconset>
+   </property>
+   <property name="text">
+    <string>Mirror</string>
+   </property>
+  </action>
  </widget>
  <layoutdefault spacing="6" margin="11"/>
+ <customwidgets>
+  <customwidget>
+   <class>TreePropertyBrowser</class>
+   <extends>QListView</extends>
+   <header>treepropertybrowser.h</header>
+  </customwidget>
+ </customwidgets>
  <resources>
   <include location="generichid.qrc"/>
  </resources>
