--- a/GenericHID/generichid/generichid.qrc
+++ b/GenericHID/generichid/generichid.qrc
@@ -2,7 +2,7 @@
     <qresource prefix="/GenericHID" >
         <file>resources/Rotate.png</file>
         <file>resources/Wire.png</file>
-        <file>resources/Cursor.png</file>
+        <file alias="Cursor" >resources/Cursor.png</file>
         <file>resources/Mirror.png</file>
         <file alias="greenlight" >resources/GreenLight.png</file>
         <file alias="redlight" >resources/RedLight.png</file>
