--- a/GenericHID/generichid/generichid.ui
+++ b/GenericHID/generichid/generichid.ui
@@ -7,14 +7,18 @@
     <x>0</x>
     <y>0</y>
     <width>982</width>
-    <height>670</height>
+    <height>659</height>
    </rect>
   </property>
   <property name="windowTitle">
    <string>GenericHID</string>
   </property>
+  <property name="windowIcon">
+   <iconset resource="generichid.qrc">
+    <normaloff>:/GenericHID/ApplicationIcon</normaloff>:/GenericHID/ApplicationIcon</iconset>
+  </property>
   <widget class="QWidget" name="centralWidget">
-   <layout class="QHBoxLayout" name="horizontalLayout_2">
+   <layout class="QVBoxLayout" name="verticalLayout">
     <property name="spacing">
      <number>0</number>
     </property>
@@ -43,7 +47,9 @@
     <property name="title">
      <string>&amp;File</string>
     </property>
+    <addaction name="actionNew"/>
     <addaction name="actionOpen"/>
+    <addaction name="separator"/>
     <addaction name="actionSave"/>
     <addaction name="actionSave_As"/>
     <addaction name="separator"/>
@@ -76,12 +82,18 @@
   <widget class="QToolBar" name="toolToolBar">
    <property name="minimumSize">
     <size>
-     <width>32</width>
-     <height>32</height>
+     <width>0</width>
+     <height>0</height>
     </size>
    </property>
    <property name="windowTitle">
     <string>toolBar</string>
+   </property>
+   <property name="iconSize">
+    <size>
+     <width>48</width>
+     <height>48</height>
+    </size>
    </property>
    <attribute name="toolBarArea">
     <enum>LeftToolBarArea</enum>
@@ -97,11 +109,14 @@
    <property name="allowedAreas">
     <set>Qt::RightDockWidgetArea</set>
    </property>
+   <property name="windowTitle">
+    <string>Properties</string>
+   </property>
    <attribute name="dockWidgetArea">
     <number>2</number>
    </attribute>
    <widget class="QWidget" name="dockWidgetContents">
-    <layout class="QHBoxLayout" name="horizontalLayout">
+    <layout class="QVBoxLayout" name="verticalLayout_2">
      <property name="spacing">
       <number>0</number>
      </property>
@@ -109,12 +124,46 @@
       <number>0</number>
      </property>
      <item>
-      <widget class="ShapePropertyBrowser" name="listView"/>
+      <widget class="QSplitter" name="splitter">
+       <property name="orientation">
+        <enum>Qt::Vertical</enum>
+       </property>
+       <widget class="ShapePropertyBrowser" name="listView"/>
+       <widget class="QTextEdit" name="txtPropertyHelp">
+        <property name="undoRedoEnabled">
+         <bool>false</bool>
+        </property>
+        <property name="readOnly">
+         <bool>true</bool>
+        </property>
+        <property name="textInteractionFlags">
+         <set>Qt::LinksAccessibleByKeyboard|Qt::LinksAccessibleByMouse|Qt::TextBrowserInteraction|Qt::TextSelectableByKeyboard|Qt::TextSelectableByMouse</set>
+        </property>
+       </widget>
+      </widget>
      </item>
     </layout>
    </widget>
   </widget>
+  <widget class="QToolBar" name="toolBarEdit">
+   <property name="windowTitle">
+    <string>toolBar</string>
+   </property>
+   <attribute name="toolBarArea">
+    <enum>TopToolBarArea</enum>
+   </attribute>
+   <attribute name="toolBarBreak">
+    <bool>false</bool>
+   </attribute>
+   <addaction name="actionNew"/>
+   <addaction name="actionOpen"/>
+   <addaction name="actionSave"/>
+  </widget>
   <action name="actionOpen">
+   <property name="icon">
+    <iconset resource="generichid.qrc">
+     <normaloff>:/GenericHID/FileOpen</normaloff>:/GenericHID/FileOpen</iconset>
+   </property>
    <property name="text">
     <string>&amp;Open</string>
    </property>
@@ -123,6 +172,10 @@
    </property>
   </action>
   <action name="actionSave">
+   <property name="icon">
+    <iconset resource="generichid.qrc">
+     <normaloff>:/GenericHID/FileSave</normaloff>:/GenericHID/FileSave</iconset>
+   </property>
    <property name="text">
     <string>&amp;Save</string>
    </property>
@@ -207,6 +260,15 @@
    </property>
    <property name="text">
     <string>Mirror</string>
+   </property>
+  </action>
+  <action name="actionNew">
+   <property name="icon">
+    <iconset resource="generichid.qrc">
+     <normaloff>:/GenericHID/FileNew</normaloff>:/GenericHID/FileNew</iconset>
+   </property>
+   <property name="text">
+    <string>New</string>
    </property>
   </action>
  </widget>
@@ -403,6 +465,22 @@
     </hint>
    </hints>
   </connection>
+  <connection>
+   <sender>actionNew</sender>
+   <signal>triggered()</signal>
+   <receiver>GenericHIDClass</receiver>
+   <slot>onFileNew()</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>-1</x>
+     <y>-1</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>490</x>
+     <y>334</y>
+    </hint>
+   </hints>
+  </connection>
  </connections>
  <slots>
   <slot>onFileOpen()</slot>
@@ -416,5 +494,6 @@
   <slot>onMirrorTool()</slot>
   <slot>onPointerTool()</slot>
   <slot>onWireLinkTool()</slot>
+  <slot>onFileNew()</slot>
  </slots>
 </ui>
