--- a/GenericHID/generichid/generichid.qrc
+++ b/GenericHID/generichid/generichid.qrc
@@ -1,19 +1,19 @@
 <RCC>
     <qresource prefix="/GenericHID" >
-        <file alias="ApplicationIcon" >resources/ApplicationIcon.png</file>
-        <file>resources/Rotate.png</file>
-        <file>resources/Wire.png</file>
-        <file alias="Cursor" >resources/Cursor.png</file>
-        <file>resources/Mirror.png</file>
-        <file alias="greenlight" >resources/GreenLight.png</file>
-        <file alias="redlight" >resources/RedLight.png</file>
-        <file alias="MirrorCursor" >resources/Mirror Cursor.png</file>
-        <file alias="RotateCursor" >resources/Rotate Cursor.png</file>
-        <file alias="WireCursor" >resources/Wire Cursor.png</file>
-        <file alias="MirrorCursorOff" >resources/Mirror Cursor Off.png</file>
-        <file alias="RotateCursorOff" >resources/Rotate Cursor Off.png</file>
-        <file alias="WireCursorOff" >resources/Wire Cursor Off.png</file>
-        <file alias="WireCursorNot" >resources/Wire Cursor Not.png</file>
+        <file alias="ApplicationIcon" >resources/applicationicon.png</file>
+        <file>resources/rotate.png</file>
+        <file>resources/wire.png</file>
+        <file alias="Cursor" >resources/cursor.png</file>
+        <file>resources/mirror.png</file>
+        <file alias="greenlight" >resources/greenlight.png</file>
+        <file alias="redlight" >resources/redlight.png</file>
+        <file alias="MirrorCursor" >resources/mirror cursor.png</file>
+        <file alias="RotateCursor" >resources/rotate cursor.png</file>
+        <file alias="WireCursor" >resources/wire cursor.png</file>
+        <file alias="MirrorCursorOff" >resources/mirror cursor off.png</file>
+        <file alias="RotateCursorOff" >resources/rotate cursor off.png</file>
+        <file alias="WireCursorOff" >resources/wire cursor off.png</file>
+        <file alias="WireCursorNot" >resources/wire cursor not.png</file>
         <file alias="FileSave" >resources/save.png</file>
         <file alias="FileNew" >resources/new.png</file>
         <file alias="FileOpen" >resources/open.png</file>
