--- a/GenericHID/generichid/timerconfigdlg.ui
+++ b/GenericHID/generichid/timerconfigdlg.ui
@@ -11,7 +11,7 @@
    </rect>
   </property>
   <property name="windowTitle">
-   <string>TimerConfigDlg</string>
+   <string>Timer Configuration</string>
   </property>
   <layout class="QVBoxLayout" name="verticalLayout_2">
    <item>
